Day 2: Completed JWT login, register, BCrypt, MongoDB, and secured hello endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=securefilevault
-spring.data.mongodb.uri=mongodb+srv://Parth:<Parth>@parth.q48vilu.mongodb.net/?retryWrites=true&w=majority&appName=Parth
+spring.data.mongodb.uri=mongodb+srv://Parth:K9yYxGn4DznfQV@parth.q48vilu.mongodb.net/?retryWrites=true&w=majority&appName=Parth
 spring.data.mongodb.database=securevault
 server.port=8080
