--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,8 @@ aws.secretKey=${AWS_SECRET_KEY}
 aws.region=us-west-1
 aws.s3.bucket=secure-file-vault-bucket
 
+app.jwt.secret=${JWT_SECRET:change_this_to_64+_bytes_of_entropy}
+app.jwt.expiration-ms=${JWT_EXPIRATION_MS:36000000}
+
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
