--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ app.jwt.expiration-ms=${JWT_EXPIRATION_MS:36000000}
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
+AES_KEY_32=12345678901234567890123456789012
